[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player2.gd" type="Script" id=1]
[ext_resource path="res://assets/player_test.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="player2" type="RigidBody2D"]

position = Vector2( 409, 223 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.2
gravity_scale = 4.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 20 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
applied_force = Vector2( 0, 30 )
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear" ]
__meta__ = {
"_edit_group_": true
}

[node name="player_anim" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="player_collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="ground_detector" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 100 )
collision_mask = 1


